[ARQ-1651] No console logging with managed karaf container